<b><u> v2.15.1, 04.09.2016</b></u>
<font color=#FF8C00>&#9830;</font> Disabled ObjectiveTracker skin, it caused the UI hide. -.-


<b><u> v2.15, 04.09.2016</b></u>
<font color=#FF8C00>&#9830;</font> Change Tooltip font.
<font color=#FF8C00>&#9830;</font> Update the ObjectiveTracker skin.
<font color=#FF8C00>&#9830;</font> Add new bank/bag mover to install.
<font color=#FF8C00>&#9830;</font> Add "Flight Masters's Whistle" to the LocPanel teleport menu.
<font color=#FF8C00>&#9830;</font> Add a new Chat Tab for whispers. Do the install for Chat again.

<b><u> v2.14, 29.08.2016</b></u>
<font color=#FF8C00>&#9830;</font> Rearrange customTexts in install.
<font color=#FF8C00>&#9830;</font> Color my UI name in the TOC file.
<font color=#FF8C00>&#9830;</font> Add font file to core, it will replace some blizz default fonts.
<font color=#FF8C00>&#9830;</font> More work on the ObjectiveTracker.
<font color=#FF8C00>&#9830;</font> Add Tooltips for spells in the LocPanel. And some code adjustments.
<font color=#FF8C00>&#9830;</font> Enhance the skins options.
<font color=#FF8C00>&#9830;</font> Completly overhaul my install file.
<font color=#FF8C00>&#9830;</font> Add a classIcon for the target frame. Disabled by default.
<font color=#FF8C00>&#9830;</font> Enable new eliteIcon on Nameplates for FRIENDLY/ENEMY_NPC's.

<b><u> v2.13, 22.08.2016</b></u>
<font color=#FF8C00>&#9830;</font> Adjustments to the Layouts.
<font color=#FF8C00>&#9830;</font> Update LocPanel, credits Darth Predator.
<font color=#FF8C00>&#9830;</font> Change the changelog to only show if my UI is installed.
<font color=#FF8C00>&#9830;</font> Fix an issue wich prevent to use ClassColorOverride if transparent isn't selected.
<font color=#FF8C00>&#9830;</font> Code cleanup

<b><u> v2.12, 18.08.2016</b></u>
<font color=#FF8C00>&#9830;</font> An extra frame will show up, if the GMOTD gets updated.
<font color=#FF8C00>&#9830;</font> Hopefully fix now the lua error in changelog. X.x