@@ -1,6 +1,10 @@
+<b><u> v2.16, 05.09.2016</b></u>
+<font color=#FF8C00>&#9830;</font> Revert changes to the Chat Tab.
+<font color=#FF8C00>&#9830;</font> Add own skin for Oderhall CommandBar. It's movable now.
+<font color=#FF8C00>&#9830;</font> More work on the ObjectiveTracker. The error with the UI to hide should be fixed. Still a tain left.
+
 <b><u> v2.15.1, 04.09.2016</b></u>
 <font color=#FF8C00>&#9830;</font> Disabled ObjectiveTracker skin, it caused the UI hide. -.-
-
 
 <b><u> v2.15, 04.09.2016</b></u>
 <font color=#FF8C00>&#9830;</font> Change Tooltip font.
